// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu > Menu.Item > render with active props 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-2 svg {
  fill: #3f4250;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #222638;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-2 svg {
  fill: #3f4250;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #222638;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-2 svg {
  fill: #3f4250;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #222638;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <button
        class="emotion-2 emotion-3"
        data-active="true"
        role="menuitem"
        type="button"
      >
        Borderless Props
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with borderless props 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 0.125rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-2 svg {
  fill: #3f4250;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #222638;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-2 svg {
  fill: #3f4250;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #222638;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-2 svg {
  fill: #3f4250;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #222638;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <button
        class="emotion-2 emotion-3"
        role="menuitem"
        type="button"
      >
        Borderless Props
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-2 svg {
  fill: #3f4250;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #222638;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-2 svg {
  fill: #3f4250;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #222638;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #3f4250;
  background: none;
}

.emotion-2 svg {
  fill: #3f4250;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #e9eaeb;
  color: #222638;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #222638;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <button
        class="emotion-2 emotion-3"
        role="menuitem"
        type="button"
      >
        Default Props
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with disabled props 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.emotion-2 svg {
  fill: #b5b7bd;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.emotion-2 svg {
  fill: #b5b7bd;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <button
        class="emotion-2 emotion-3"
        disabled=""
        role="menuitem"
        type="button"
      >
        Disabled Props
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > Menu.Item > render with sentiment danger 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-0 {
  border-bottom: 1px solid #d9dadd;
  padding: 0.25rem 0.25rem;
}

.emotion-0:last-child {
  border: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
  max-height: 2.5rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: inherit;
  padding: 0.25rem 0.5rem;
  border: none;
  cursor: pointer;
  min-width: 6.875rem;
  width: 100%;
  border-radius: 0.25rem;
  -webkit-transition: background-color 200ms,color 200ms;
  transition: background-color 200ms,color 200ms;
  color: #b3144d;
  background: none;
}

.emotion-2 svg {
  fill: #b3144d;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2[data-active='true'] {
  background-color: #ffd3e3;
  color: #92103f;
}

.emotion-2:hover svg,
.emotion-2:focus svg,
.emotion-2[data-active='true'] svg {
  fill: #92103f;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <button
        class="emotion-2 emotion-3"
        role="menuitem"
        type="button"
      >
        Danger
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders bottom 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r1k:"
      aria-describedby="menu-:r1k:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders left 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r1n:"
      aria-describedby="menu-:r1n:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders right 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r1q:"
      aria-describedby="menu-:r1q:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > placement > renders top 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r1h:"
      aria-describedby="menu-:r1h:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.Group 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r7:"
      aria-describedby="menu-:r7:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.Group and labelDescription 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:rb:"
      aria-describedby="menu-:rb:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.Item 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r4:"
      aria-describedby="menu-:r4:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:ri:"
      aria-describedby="menu-:ri:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:rf:"
      aria-describedby="menu-:rf:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with disclosure not a function 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r0:"
      aria-describedby="menu-:r0:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        type="button"
      >
        Menu is visible
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > renders with visible=false 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r2:"
      aria-describedby="menu-:r2:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        type="button"
      >
        Menu is visible
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > should search on simple childs 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > should search on simple complex childs 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > sizes > renders large 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r23:"
      aria-describedby="menu-:r23:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > sizes > renders medium 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r20:"
      aria-describedby="menu-:r20:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu > sizes > renders small 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

<div
    data-testid="testing"
  >
    <div
      aria-controls="menu-:r1t:"
      aria-describedby="menu-:r1t:"
      class="emotion-0 emotion-1"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;
